2003-07-26  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSImage.m
	In [initWithIconHandle:] and [initWithBitmapHandle:] release the
	new bitmap image representation after adding it to the array.
	* Source/NSBitmapImageRep.m
	In [_initFromTIFFImage:number:] free the info returned by
	NSTiffGetInfo(). 
	* Source/NSTableView.m
	In [sizeToFit] free isResizable.
	* Source/GSMemoryPanel.m
	In [update:] free the list returned by GSDebugAllocationClassList().

2003-07-24  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Fix setting ADDITIONAL_INCLUDE_... in
	audiofile section.

2003-07-23  Gregory John Casamento <greg_casamento@yahoo.com>

	* Panels/GSSpellPanel.gorm: Added to replace old .gmodel
	* Source/NSSpellChecker.m: Updated to use .gorm file.
	
2003-07-23  Adam Fedor  <fedor@gnu.org>

	* Version 0.8.8

2003-07-23  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/DocMakefile: only remove directory containing 'stamp' for
	clean.

2003-07-23 22:23  Alexander Malmberg <alexander@malmberg.org>

	* Headers/gnustep/gui/NSResponder.h: Make _menu private.

	* Headers/gnustep/gui/NSMenuView.h: Add _attachedMenu ivar.
	* Source/NSMenuView.m: Use it.

2003-07-22  Adam Fedor  <fedor@gnu.org>

	* Source/NSOpenGLView.m ([NSOpenGLView -initWithFrame:]): Implemented
	(Patch from Damien Genet).

2003-07-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Documentation/GNUmakefile.postamble: Tweak for make update.
	* Source/DocMakefile: ditto
	* Headers/gnustep/gui/NSLayoutManager.h: documentation tweaks.
	* Headers/gnustep/gui/NSRulerMarker.h: ditto
	* Headers/gnustep/gui/NSText.h: ditto
	* Headers/gnustep/gui/NSTextContainer.h: ditto
	* Source/NSLayoutManager.m: ditto
	* Source/NSPopUpButtonCell.m: ditto
	* Source/NSTextContainer.m: ditto
	* Source/NSWorkspace.m: ditto
	* Source/NSFont.m: ditto
	* Source/NSOpenPanel.m: ditto
	* Source/NSPasteboard.m: ditto
	* Source/NSView.m: ditto
	* Source/NSBezierPath.m: ditto
	* Source/NSGraphicsContext.m: ditto